edited deck and preview image

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Technopreneur is the annual National-level entrepreneurial symposium of Govt. Model Engineering College hosted by Innovation Entrepreneurship Development Cell, MEC in collaboration with TiE Kerala, Kerala Startup Mission and Headstart Network Foundation.">
     <title>Technopreneur23 - Partnership</title>
-    <meta property="og:image" content="https://raw.githubusercontent.com/IEDCMEC/techno-letterhead/main/techno_preview-min.jpeg" />
+    <meta property="og:image" content="https://raw.githubusercontent.com/IEDCMEC/techno-letterhead/main/preview.jpg" />
     <link rel="icon" href="%PUBLIC_URL%/logo.jpeg" />
   </head>
   <body>
